[package]
name = "tiny-trails"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiny_trails"
path = "src/lib.rs"

[[bin]]
name = "tiny-trails"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "postgres"] }
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
chrono = "0.4.40"
chrono-humanize = "0.2.3"
async-trait = "0.1.87"
sha2 = "0.10.8"
hex = "0.4.3"
constcat = "0.6.0"
async-dropper = { version = "0.3.1", features = ["simple", "tokio"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.2"
