[project]
name = "tiny-trails"
version = "0.1.0"
description = ""
authors = [
    {name = "anwitars"}
]
requires-python = ">=3.12"
dependencies = ["pydantic (>=2.11.7,<3.0.0)", "fastapi[standard] (>=0.116.1,<0.117.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
