[project]
name = "tiny-trails"
version = "0.1.0"
description = ""
authors = [
    {name = "anwitars"}
]
requires-python = ">=3.12"
dependencies = ["pydantic (>=2.11.7,<3.0.0)", "fastapi[standard] (>=0.116.1,<0.117.0)", "sqlalchemy (>=2.0.41,<3.0.0)", "alembic (>=1.16.4,<2.0.0)", "psycopg2 (>=2.9.10,<3.0.0)", "asyncpg (>=0.30.0,<0.31.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
mock = "^5.2.0"
freezegun = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pyright = "^1.1.403"

[tool.pyright]
include = [
    "tiny_trails",
    "tests"
]
